# INF2475

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pyrightconfig.json
src/INF2475/: math_helpers.py  neuron.py  nn.py  perceptron.py
tests/: test_class1.py
